# Messenger

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram.drawio  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Classes/: ConnectDb.cpp  ConnectDb.h
Client/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Client/Classes/: ConnectDb.cpp  ConnectDb.h
Server/: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Server/.cmake/api/v1/reply/: cache-v2-8853831ac7245dd83fda.json  cmakeFiles-v1-125ea0297f2af93af694.json  codemodel-v2-fdcf53260f729635c718.json  index-2021-10-27T16-57-17-0118.json  target-Messenger-Debug-3b1e6761f3730911b322.json  target-Messenger_autogen-Debug-2dcbf24298f0e4a09d6c.json  target-Messenger_autogen_timestamp_deps-Debug-6783b32c8454a967884a.json
Server/Classes/: ConnectDb.cpp  ConnectDb.h  client_window.cpp  client_window.h  client_window.ui  get_data.cpp  get_data.h  gettingthread.cpp  gettingthread.h  mythread.cpp  mythread.h  mythread2.cpp  mythread2.h  send.cpp  send.h  send_data.cpp  send_data.h  sendingthread.cpp  sendingthread.h
